--- a/operations.ipynb
+++ b/operations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -14,6 +14,48 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "3.09101924937\n",
+      "0.490101709648\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = [1,1,1,1,1,1,1,1,1,1,1,1,10,10,.1]\n",
+    "print np.median(t)\n",
+    "print np.std(t)\n",
+    "print np.log10(np.std(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -629,13 +671,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# LOG TRANSFORM 5 BINS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_binFSC(x):\n",
+    "    return int(x / 205 * 5)\n",
+    "\n",
+    "def get_binOther(x):\n",
+    "    return int((np.log10(x)+1) / (3.00645+1) * 5)\n",
+    "\n",
+    "def binmap(df):\n",
+    "    for i in range(7):\n",
+    "        if i == 0:\n",
+    "            df.ix[:,i] = df.ix[:,[i]].applymap(get_binFSC)\n",
+    "        else: \n",
+    "            df.ix[:,i] = df.ix[:,[i]].applymap(get_binOther)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(1,2873): \n",
+    "    temp = pd.read_csv('C:\\\\python27\\\\FCS\\\\'+str(i)+'.csv')\n",
+    "    binmap(temp)\n",
+    "    topath = 'C:\\\\python27\\\\FCS5b10log\\\\'+str(i)+'.csv'\n",
+    "    temp.to_csv(topath)"
+   ]
   },
   {
    "cell_type": "code",
