--- a/Deck.ipynb
+++ b/Deck.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I've downloaded 2,872 csv files. This corresponds to 359 patients * 8 tubes. I know from the documentation that each tube contains 30,000 cells with 7 different per tube. Also that the 8th tube represents an \"iso\" or negative control tube (no useful information). Let's take a peak. "
+    "I've downloaded 2,872 csv files. This corresponds to 359 patients * 8 tubes. I know from the documentation that each tube contains 30,000 cells with 7 different per tube. Also that the 8th tube represents an \"iso\" or negative control tube (no useful information). Take a peek.."
    ]
   },
   {
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What's the range for each marker? First, it might be useful now and maybe later to put all tubes into one file each so we only have to open 1 file per patient."
+    "What's the range for each marker? First, it will be useful to put all tubes into one file each so we only have to open 1 file per patient."
    ]
   },
   {
@@ -286,9 +286,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Appears the first marker of every tube maxes at 204.6 and all others at 1014.83093. We will use this information later..\n",
+    "Appears the first marker of every tube maxes at 204.6 and all others at 1014.83093. \n",
     "\n",
-    "For now, let's look at some plots. Patient 1, first two markers plotted against each other. (This is what pathologists do, for several dozen marker combinations.)"
+    "Let's look at some plots. Patient 1, first two markers plotted against each other. (This is what pathologists do, for several dozen marker combinations.)"
    ]
   },
   {
@@ -373,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's a ton of data squashed at the bottom. We should apply a lof transformation to spread things out."
+    "There's a ton of data squashed at the bottom. We should apply a log 10 transformation to spread things out."
    ]
   },
   {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -703,8 +703,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9486L, 14711L, 5269L, 440L, 78L, 12L, 2L, 1L, 1L, 0L]\n",
-      "[0L, 510L, 835L, 2287L, 5446L, 1923L, 2647L, 4982L, 5161L, 6209L]\n"
+      "[9486L, 14711L, 5269L, 440L, 78L, 12L, 2L, 1L, 1L, 0L]\n"
      ]
     }
    ],
@@ -961,7 +960,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That matrix contains 359 histograms for marker 3 in tube 1. If we combine histograms for all 7 markers side by side it would look like... To feed it through SVM we'll have to scale it to -1 to 1 or 0 to 1 (it doesn't matter). Also the scaler can't handle NaN so we have to backfill with 0s."
+    "That matrix contains 359 histograms for marker 3 in tube 1. We can combine histograms for all 7 markers side by side to feed it through the SVM. We'll also have to scale it to -1 to 1 or 0 to 1 (it doesn't matter). Also the scaler can't handle NaN so we have to backfill with 0s."
    ]
   },
   {
